test/Fail/NoIrrelevance8.agda
{-# OPTIONS --no-irrelevance #-}

record R : Set₁ where
    field
      .f : Set
